# cgf-server

./: .gitignore  .mongodb.example  .openplanet-auth.example  .ubisoft-acct.example  ProtocolDocs.md  README.md  dev-slow.sh  dev.sh  main.py  prod.sh  pyproject.toml
cfg/: Client.py  CommonDocument.py  User.py  __init__.py  consts.py  db.py  users.py  utils.py
cgf/: Client.py  NadeoApi.py  RandomMapCacher.py  User.py  consts.py  db.py  http.py  op_auth.py  users.py  utils.py
cgf/models/: Map.py  MapPack.py  RandomMapQueue.py
