[tool.poetry]
name = "cgf-server"
version = "0.1.0"
description = "Community Game Framework server for Trackmania Plugins"
authors = ["Max Kaye <m@xk.io>"]
license = "Public Domain"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
beanie = "^1.15.4"
pymongo = "^4.3.3"
aiohttp = "^3.8.3"
boto3 = "^1.26.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
